--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ body {
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #f9f9fa;
   text-align: center;
   padding: 0px 16px;
   text-decoration: none;
